fix: gap on small-mobile between project cards on the main page

--- a/src/components/main/projects/projects.scss
+++ b/src/components/main/projects/projects.scss
@@ -29,7 +29,7 @@
         margin-bottom: 40px;
       }
 
-      @include mobile {
+      @include small-mobile {
         margin-bottom: 20px;
       }
     }
